--- a/assets/tailwind/main.css
+++ b/assets/tailwind/main.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+
+    /* CHANGE COLOR SCROLLBAR */
+  
+    /* CHROME, SAFARI, EDGE */
+    ::-webkit-scrollbar {
+      @apply w-[.8rem];
+      @apply bg-slate-200;
+      @apply rounded-lg;
+    }
+  
+    ::-webkit-scrollbar-thumb {
+      @apply rounded-lg;
+      @apply bg-black-mamba;
+    }
+  }
+  
+  @layer utilities {
+    .zoom-1 {
+      zoom: 1;
+    }
+  
+    .zoom-2 {
+      zoom: 1.25;
+    }
+  
+    .zoom-3 {
+      zoom: 1.5;
+    }
+  }
